feat: publish production-oriented api boilerplate
